[tool.poetry]
name = "arvato-ml"
version = "0.1.0"
description = ""
authors = ["kit <kit@humn.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
jupyterlab = "^3.2.6"
tqdm = "^4.62.3"
dvc = {extras = ["gdrive"], version = "^2.9.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
